2005-08-06 Dario Massarin <nekkar@libero.it>
        * Change the way we handle the Transfer actions
        * Reoganize the gui, introducing a new ViewsContainer class.

2005-08-02 Dario Massarin <nekkar@libero.it>
        Big commit:
        * KGet ported to qt4. Here there are some issues that still need to be
        resolved. For example I had to disable the bittorrent plugin becouse
        currently I don't know how to make it compile again.
        * Started implementing a new sidebar with qt3. Then I switched to qt4 and
        realized I had to rewrite it, since I made use of the QListBox classes :-(
        So I did. I used the QVBoxLayout class.
        More to come..

2005-07-29 Dario Massarin <nekkar@libero.it>
        Many changes:
        * Implement two TransferGroup actions (start and stop) and a popupMenu()
        function in the TransferGroupHandler function.
        This means that now we can start the download of a group and all the
        necessary scheduling operations are handled by the scheduler.
        * Make it possible to have actions defined in the TransferGroupHandler
        without having to make the handler a QObject. This was achieved by 
        creating a QObject object on demand only if necessary. I'm planning
        to do the same with the TransferHandler class (where this issue becomes 
        even more critical, especially if the user has lots of transfers).
        * Right clicking on a TransferGroup in the mainview shows a popup menu
        populated with the available actions.
        * Found a way to implement delays in the jobs. Since I don't want a Job to
        be a QObject, I implemented the timers inside the Scheduler.
        * When a download switches in the aborted status, delay it.
        * Now if we move the transfers in a group, they are started or stopped
        accordingly to their new position. Wow. This finally makes it possible for
        us to decide in which order to download files!