@@ -30,6 +30,8 @@ class TransferKioFactory : public TransferFactory
                                    TransferGroup * parent, Scheduler * scheduler,
                                    const QDomElement * e = 0 );
 
+        QWidget * createDetailsWidget( TransferHandler * transfer );
+
         const QList<KAction *> actions();
 };
 
